--- a/templates/reset_password_email.html
+++ b/templates/reset_password_email.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <p>Olá {{ user.nome }},</p>
-    <p>Recebemos um pedido para redefinir a senha da sua conta.</p>
-    <p>Para continuar, clique no link abaixo:</p>
-    <p><a href="{{ url_for('reset_password_confirm', token=token, _external=True) }}">{{ url_for('reset_password_confirm', token=token, _external=True) }}</a></p>
-    <p>Se você não solicitou esta redefinição, por favor, ignore este e-mail.</p>
-    <p>Obrigado,</p>
-    <p>A equipe da sua aplicação</p>
-  </body>
+
+<body>
+  <p>Olá {{ user.nome }},</p>
+  <p>Recebemos um pedido para redefinir a senha da sua conta.</p>
+  <p>Para continuar, clique no link abaixo:</p>
+  <p><a href="https://w3.math.uminho.pt/FlashesMatematicos/reset_password/{{ token }}">
+      https://w3.math.uminho.pt/FlashesMatematicos/reset_password/{{ token }}
+    </a>
+  </p>
+  <p>Se você não solicitou esta redefinição, por favor, ignore este e-mail.</p>
+  <p>Obrigado,</p>
+  <p>A equipe da sua aplicação</p>
+</body>
+
 </html>
